Fixed scrollbar always visible in firefox bug

--- a/content/stylesheets/screen.sass
+++ b/content/stylesheets/screen.sass
@@ -20,6 +20,7 @@ body
   background-size:  cover
   text-shadow:      0px 1px 0px $shadow
   font-family:      'Open Sans', $verdana
+  overflow:         hidden
 
 a
   &:link, &:visited
